Fixed: navigation text wrap

--- a/themes/inbeat/assets/scss/partials/_header.scss
+++ b/themes/inbeat/assets/scss/partials/_header.scss
@@ -346,8 +346,10 @@
 
           &.--no-flex {
             display: block;
-            white-space: nowrap;
             padding: 0 8px;
+          }
+          &.--no-wrap {
+            white-space: nowrap;
           }
 
           h4 {
